Mobile full screen lightbox: (X) covers thumbnails – fixed

--- a/src/components/lightbox/natuive-lightbox.scss
+++ b/src/components/lightbox/natuive-lightbox.scss
@@ -396,6 +396,13 @@
 	
 	}
 	
+	.n-slider--overlay.n-slider--wrap.n-slider--vertical > .n-slider--nav {
+		
+	    padding-top: 3em;
+	    box-sizing: border-box;		
+		
+	}
+
 }
 	
 @media (max-height: $screen-narrow-max) {
